--- a/app/views/lists/_list_song.html.erb
+++ b/app/views/lists/_list_song.html.erb
@@ -8,7 +8,7 @@
       <%= lsong.song.title%>
     </h1>
     <h1><%= lsong.tonality if lsong.tonality.present? %></h1>
-    <% if @same_language %>
+    <% if !@same_language %>
     <h1 class="trad">
       <%= " (#{lsong.song[translater('title')[I18n.locale]]})" %>
     </h1>
